syntax = "proto3";

package user;

option go_package = "user-service/proto";

// ユーザー情報を表すメッセージ
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// ユーザー取得リクエスト
message GetUserRequest {
  string id = 1;
}

// ユーザー取得レスポンス
message GetUserResponse {
  User user = 1;
}

// ユーザーサービス
service UserService {
  // ユーザー情報を取得
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
} 